--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
                     <img src="{{ asset('android-chrome-192x192.png') }}" width="30" height="30" class="d-inline-block align-top" alt="logo">
-                    Evernet SRM
+                    Evernet СRM
                 </a>
             </nav>
         {%  endblock %}
