--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,8 @@
     {{ encore_entry_link_tags('login') }}
 {% endblock %}
 
+{% block navbar %}{% endblock %}
+
 {% block title %}{{ 'Login'|trans }}{% endblock %}
 
 {% block body %}
