--- a/templates/_modal.html.twig
+++ b/templates/_modal.html.twig
@@ -11,19 +11,19 @@
                 <h5 class="modal-title" data-modal-form-target="modalTitle">
                     {{ modalTitle|default('Loading...') }}
                 </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+{#                <button type="button" class="close" data-dismiss="modal" aria-label="Close">#}
+{#                    <span aria-hidden="true">&times;</span>#}
+{#                </button>#}
             </div>
             <div class="modal-body" data-modal-form-target="modalBody">
                 {{ modalContent|default('Loading...') }}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                     {{ 'Close'|trans }}
                 </button>
                 <button type="button" class="btn btn-primary">
-                    {{ 'Save changes'|trans }}
+                    {{ 'Save'|trans }}
                 </button>
             </div>
         </div>
