--- a/templates/manage_keywords/index.html.twig
+++ b/templates/manage_keywords/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 {% form_theme form with ['bootstrap_5_layout.html.twig', _self] %}
-{#{% form_theme form _self %}#}
+{# {% form_theme form _self %} #}
 
-{% block title %}Управление проектом{% endblock %}
+{% block title %}{{ 'Project management'|trans }}{% endblock %}
 
 {% block body %}
     {{ flasher_render() }}
@@ -11,98 +11,150 @@
         {{ stimulus_controller('keywords_management') }}
         class="container-xxl my-md-4"
     >
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <h1>{{ 'Welcome'|trans }}, {{ app.user.name }}!</h1>
-        {% endif %}
+        <div class="container">
+            {# {{ block('welcome')  }} #}
+            {{ block('select_project')  }}
+            {{ block('search_keywords')  }}
 
-        <hr>
-
-        {{ render(controller(
-            'App\\Controller\\KeywordsManagementController::searchBar'
-        )) }}
-        {{ form_start(form) }}
-        <fieldset {{ stimulus_controller('modal-form', {
-            formTitle: 'Comment'|trans
-        }) }}>
-            <legend>
-                {{ 'Current projects'|trans }}
-            </legend>
-            <p>
-                Для управления ключевыми запросами проекта, пожалуйста, воспользуйтесь меню, расположенным ниже.
-            </p>
-
-            <div class="form-error">
-                {{ form_errors(form) }}
-            </div>
-
-            <div role="region" aria-labelledby="Cap1" tabindex="0" class="table-responsive-lg">
-                <table
-                    data-keywords-management-target="table"
-                    id="ProjectKeywords"
-                    class="table table-striped table-hover caption-top"
+            {{ form_start(form, { attr: {
+                'data-keywords-management-target': 'form',
+                'data-action': 'keywords_management#formSubmit',
+            } }) }}
+                <fieldset
+                    {{ stimulus_controller('modal-form') }}
+                    data-action="hidden.bs.modal->modal-form#modalHiddenForHiddenInputs"
                 >
-                    <caption id="ProjectKeywordsCaption">
-                        Ключи для проекта <strong>&quot;ProjectName&quot;</strong>
-                    </caption>
-                    <tr>
-                        <th scope="col">
-                            {{ render(controller(
-                                'App\\Controller\\KeywordsManagementController::multicheck'
-                            )) }}
-                        </th>
-                        <th scope="col">Запрос</th>
-                        <th scope="col">Посадочная</th>
-                        <th scope="col">Группа</th>
-                        <th scope="col">Позиция</th>
-                        <th scope="col">Частотность</th>
-                        <th scope="col">Комментарий</th>
-                    </tr>
-                    {% if form.keywords is not null and form.keywords is not empty %}
-                        {% for keyword in form.keywords %}
-                            <tr class="form-group">
-                                {{ form_widget(keyword) }}
-                            </tr>
-                        {% endfor %}
-                    {% else %}
-                        {% for i in 0..6 %}
-                            <td> &mdash; </td>
-                        {% endfor %}
-                    {% endif %}
-                </table>
-            </div>
+                    {# {{ block('table_legend')  }} #}
+                    <div class="row form-error">
+                        {{ form_errors(form) }}
+                    </div>
 
-            <div class="form-group">
-                {{ form_widget(form.submit) }}
-            </div>
-            {{ include('_modal.html.twig') }}
-        </fieldset>
-        {{ form_end(form) }}
+                    <div class="row py-2">
+                        <div
+                            role="region"
+                            aria-labelledby="Cap1"
+                            tabindex="0"
+                            class="table-responsive-lg"
+                        >
+                            <table
+                                id="ProjectKeywords"
+                                data-keywords-management-target="table"
+                                class="table table-striped table-hover table-borderless align-middle">
+                                <thead class="table-primary">
+                                    <tr>
+                                        <th scope="col">
+                                            {{ render(controller(
+                                                'App\\Controller\\KeywordsManagementController::multicheck'
+                                            )) }}
+                                        </th>
+                                        <th scope="col">{{ 'Query'|trans }}</th>
+                                        <th scope="col">{{ 'Landing'|trans }}</th>
+                                        <th scope="col">{{ 'Group'|trans }}</th>
+                                        <th scope="col">{{ 'Position'|trans }}</th>
+                                        <th scope="col">{{ 'Frequency'|trans }}</th>
+                                        <th scope="col">{{ 'Comment'|trans }}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% if form.keywords is not null and form.keywords is not empty %}
+                                        {% for keyword in form.keywords %}
+                                            <tr class="form-group">
+                                                {{ form_widget(keyword) }}
+                                            </tr>
+                                        {% endfor %}
+                                    {% else %}
+                                        {% set tableColCounted = 7 %}
+                                        {% for i in 1..tableColCounted %}
+                                            <td>&mdash;</td>
+                                        {% endfor %}
+                                    {% endif %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    {{ include('_modal.html.twig') }}
+                    {{ form_widget(form.submit) }}
+                </fieldset>
+            {{ block('kw_navigation') }}
+            {{ form_end(form) }}
+        </div>
     </section>
 {% endblock %}
 
-{% block _kw_client_fieldset_keywords_entry_widget %}
+{% block select_project %}
+    <div class="row">
+        <div class="input-group">
+            {{ render(controller(
+                'App\\Controller\\KeywordsManagementController::projectEntityForm'
+            )) }}
+        </div>
+        <p class="form-text">
+            {{ 'Select the project you want to manage today'|trans }}.
+        </p>
+    </div>
+    <h2>{{ 'Keys for the project'|trans }} <strong>&quot;{{ project_name }}&quot;</strong></h2>
+{% endblock %}
+
+{% block search_keywords %}
+    <div class="row">
+        {{ render(controller(
+            'App\\Controller\\KeywordsManagementController::searchBar'
+        )) }}
+    </div>
+{% endblock %}
+
+{% block welcome %}
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <h1>{{ 'Welcome'|trans }}, {{ app.user.name }}!</h1>
+    {% endif %}
+{% endblock %}
+
+{% block table_legend %}
+     <legend class="row">
+         <h2>
+             {{ 'Keys for the project'|trans }} <strong>&quot;ProjectName&quot;</strong>
+         </h2>
+     </legend>
+{% endblock %}
+
+{% block kw_navigation %}
+    <section class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </section>
+{% endblock %}
+
+{% block _kw_manage_fieldset_keywords_entry_widget %}
     <td>{{ form_widget(form.isApproved, {'attr': {'class': 'dependent'}}) }}</td>
     <td >{{ form_widget(form.name, {'attr': {'class': 'keyword'}}) }}</td>
     <td>{{ form_widget(form.url, {'attr': {'class': 'keyword_url'}}) }}</td>
     <td>{{ form_widget(form.keywordGroup, {'attr': {'class': 'keyword_group'}}) }}</td>
     <td>{{ form_widget(form.position) }}</td>
     <td>{{ form_widget(form.frequency) }}</td>
-    <td class="text-center">
+    <td class="d-grid">
         {{ form_widget(form.clientNote) }}
-{#        data-target="#modal_{{ form.clientNote.vars.id }}"#}
         <button
             type="button"
             class="btn btn-primary"
             data-toggle="modal"
             data-action="modal-form#openHiddenModalInput"
+            id="{{ form.clientNote.vars.id }}_btn"
         >
             {% if form.clientNote.vars.value is empty %}
-                <i class="far fa-comment-alt" data-toggle="tooltip" data-placement="top" title="Add comment"></i>
+                <i
+                    class="far fa-comment-alt"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="{{ 'Add comment'|trans }}"
+                ></i>
             {% else %}
-                <i class="fas fa-comment-alt" data-toggle="tooltip" data-placement="top" title="Edit comment"></i>
+                <i
+                    class="fas fa-comment-alt"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="{{ 'Edit comment'|trans }}"
+                ></i>
             {% endif %}
         </button>
-{#        {{- block('_modal_client_note') -}}#}
-{#        {{ form.clientNote.vars.id }}#}
     </td>
 {% endblock %}
